[package]
name = "rust-fastwebsockets"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio          = { version = "1", features = ["full"] }
tokio-util     = { version = "0.7", features = ["rt"] }

# WebSocket
fastwebsockets = { version = "0.10", features = ["upgrade"] }

# HTTP server / upgrade
hyper          = { version = "1.8", features = ["http1", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1.3"
bytes          = "1"

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
thiserror      = "1"
anyhow         = "1"

# Tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth / TLS
jsonwebtoken   = "9"
rustls         = "0.23"
tokio-rustls   = "0.26"

# IDs
uuid           = { version = "1", features = ["v4", "serde"] }
